fix some issues on mobile

--- a/src/less/_footer.less
+++ b/src/less/_footer.less
@@ -62,3 +62,17 @@
     color: inherit;
   }
 }
+
+@media (max-width: 900px) {
+  ._footer {
+    flex-wrap: wrap;
+
+    &-content {
+      &-left,
+      &-center,
+      &-right {
+        flex: 1 1 100%;
+      }
+    }
+  }
+}
